--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "schema.org"
     ],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "typo3/cms-core": "^9.5 || ^10.4",
         "brotkrueml/schema": "^1.7"
     },
