--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "typo3/cms-core": "^9.5 || ^10.4",
+        "typo3/cms-core": "^9.5 || ^10.4 || ^11.0",
         "brotkrueml/schema": "^1.7"
     },
     "autoload": {
