[TASK] Use typo3/coding-standards

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
         "typo3/cms-core": "^9.5 || ^10.4 || ^11.0",
         "brotkrueml/schema": "^1.7"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.17",
+        "typo3/coding-standards": "^0.2"
+    },
     "autoload": {
         "psr-4": {
             "Brotkrueml\\SchemaVirtualLocation\\": "Classes/"
@@ -42,8 +46,5 @@
     "scripts": {
         "fix-cs": ".Build/bin/php-cs-fixer fix",
         "zip": "grep -Po \"(?<='version' => ')([0-9]+\\.[0-9]+\\.[0-9]+)\" ext_emconf.php | xargs -I {version} sh -c 'mkdir -p ../zip; git archive -v -o \"../zip/${PWD##*/}_{version}.zip\" v{version}'"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
     }
 }
