--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=7.2",
         "typo3/cms-core": "^9.5 || ^10.4 || ^11.0",
-        "brotkrueml/schema": "^1.7"
+        "brotkrueml/schema": "^1.7 || ^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
