--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
 /.php_cs export-ignore
 /README.md export-ignore
