--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 /.gitattributes export-ignore
 /.github export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
+/ecs.php export-ignore
 /README.md export-ignore
