--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "brotkrueml/schema": "^1.7 || ^2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.17",
-        "typo3/coding-standards": "^0.2"
+        "brotkrueml/coding-standards": "~2.0.2"
     },
     "autoload": {
         "psr-4": {
@@ -51,7 +50,7 @@
         }
     },
     "scripts": {
-        "fix-cs": ".Build/bin/php-cs-fixer fix",
+        "fix-cs": ".Build/bin/ecs --fix",
         "zip": "grep -Po \"(?<='version' => ')([0-9]+\\.[0-9]+\\.[0-9]+)\" ext_emconf.php | xargs -I {version} sh -c 'mkdir -p ../zip; git archive -v -o \"../zip/${PWD##*/}_{version}.zip\" v{version}'"
     }
 }
