--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "schema.org"
     ],
     "require": {
-        "php": ">=7.2",
-        "typo3/cms-core": "^10.4.11 || ^11.5 || ^12.0",
+        "php": ">=8.1",
+        "typo3/cms-core": "^11.5.19 || ^12.4",
         "brotkrueml/schema": "^1.7 || ^2.0"
     },
     "require-dev": {
