--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "brotkrueml/schema": "^1.7 || ^2.0",
+        "brotkrueml/schema": "^3.0@dev",
         "typo3/cms-core": "^11.5.19 || ^12.4"
     },
     "require-dev": {
