--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     "require": {
         "php": ">=8.1",
         "brotkrueml/schema": "^3.0",
-        "typo3/cms-core": "^11.5.19 || ^12.4"
+        "typo3/cms-core": "^11.5.19 || ^12.4 || ^13.0"
     },
     "require-dev": {
         "brotkrueml/coding-standards": "~5.1.0",
         "ergebnis/composer-normalize": "~2.42.0"
     },
+    "minimum-stability": "RC",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Brotkrueml\\SchemaVirtualLocation\\": "Classes/"
